# yadisk-subtract

./: .travis.yml  CMakeLists.txt  CPackConfig.cmake  README.md
docs/: doxygen.conf
examples/: example1.cpp
include/url/: path.hpp
include/yadisk/ops/: Node.h  Predicate.hpp  Resource.hpp  SubstractOperation.h  Tree.h  Tree.hpp  subtract.hpp
sources/: Node.cpp  Resource.cpp  Substract.cpp  SubstractOperation  Tree.cpp  subtract.cpp
tests/ops/subtract/: tests.cpp
